--- a/static/less/global.less
+++ b/static/less/global.less
@@ -5,10 +5,13 @@ html{
 }
 body{
     font-family:@fontStack;  
-    background-color:@backgroundColor;
+    background-color: @headerColor;
+    background-image: url('/static/img/bg.jpg') ;
+    background-attachment:fixed;            
     height: 100%;   
     box-sizing: border-box; 
     color:@textColor;
+    overflow-x: hidden;
 }
 .lineRight{
     border-right:1px solid @accentColor;
